fixed `AzaleaCommand` tab completion